--- a/Newbie/Challenge 2/index.html
+++ b/Newbie/Challenge 2/index.html
@@ -14,11 +14,19 @@
   </style>
 </head>
 <body>
-  
-  Reliable, efficient delivery
-  Powered by Technology
-  Our Artificial Intelligence powered tools use millions of project data points 
-  to ensure that your project is successful
+  <div id="banner">
+    <h2 id="first-title">
+      Reliable, efficient delivery
+    </h2>
+    <h2 id="second-title">
+      Powered by Technology
+    </h2>
+    <p>
+      Our Artificial Intelligence powered tools use millions of project data </br> points 
+      to ensure that your project is successful
+    </p> 
+  </div>
+
   <div class="wrap">
       <div class="card" id="card-1">
         <h2 class="card-title">
