--- a/Newbie/Challenge 2/index.html
+++ b/Newbie/Challenge 2/index.html
@@ -27,7 +27,7 @@
     </p> 
   </div>
 
-  <div class="wrap">
+  <div class="wrap-grid">
       <div class="card" id="card-1">
         <h2 class="card-title">
           Supervisor
