Final css styles + grid

--- a/Newbie/Challenge 2/index.html
+++ b/Newbie/Challenge 2/index.html
@@ -66,18 +66,11 @@
       </div>
 
   </div>
-
- 
-
-  
-
-  
-
   
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Isidoro</a>.
+      Coded by <a href="#">Isidoro Aróstegui</a>.
     </p>
   </footer>
 </body>
