--- a/Newbie/Challenge 1/index.html
+++ b/Newbie/Challenge 1/index.html
@@ -30,14 +30,14 @@
             <div id="image-container">
               <img src="images/avatar-michelle.jpg" id="Michelle-img" alt="#">
             </div>
-            
+
             <div id="user-info">
               <h5>Michelle Appleton</h5> 
               <p>28 Jun 2020</p> 
             </div>
 
             <div id="share">
-              <img src="design/share.svg" alt="">
+              <img src="design/" alt="">
             </div>
           </div>      
     
@@ -47,12 +47,12 @@
 
   </div>
 
-  <!--
+ 
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">Isidoro Aróstegui</a>.
     </div>
 
-  -->
+
 </body>
 </html>
