--- a/Newbie/Challenge 2/index.html
+++ b/Newbie/Challenge 2/index.html
@@ -6,6 +6,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="responsive.css">
   <title>Frontend Mentor | Four card feature section</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -22,7 +23,7 @@
       Powered by Technology
     </h2>
     <p>
-      Our Artificial Intelligence powered tools use millions of project data </br> points 
+      Our Artificial Intelligence powered tools use millions of project data points 
       to ensure that your project is successful
     </p> 
   </div>
