--- a/Newbie/Challenge 4/index.html
+++ b/Newbie/Challenge 4/index.html
@@ -1,50 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="styles.css">
+
   <title>Frontend Mentor | Single Price Grid Component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
+
 <body>
-  Join our community
 
-  30-day, hassle-free money back guarantee
+  <div id="card">
 
-  Gain access to our full library of tutorials along with expert code reviews. 
-  Perfect for any developers who are serious about honing their skills.
+    <div id="join-section">
+      <div id="text-join">
+        <h2>
+          Join our community
+        </h2>
 
-  Monthly Subscription
+        <h3>
+          30-day, hassle-free money back guarantee
+        </h3>
 
-  &dollar;29 per month
+        <p>
+          Gain access to our full library of tutorials along with expert code reviews.
+          Perfect for any developers who are serious about honing their skills.
+        </p>
+      </div>
+    </div>
 
-  Full access for less than &dollar;1 a day
+    <div id="subscription-section">
+          <h3>
+            Monthly Subscription
+          </h3>
+          <h4>
+            <strong id="29">$29</strong> <p id="per-month">per month</p> 
+          </h4>
+          <p id="access">
+            Full access for less than &dollar;1 a day
+          </p>
+          <div id="signup-button">
+            <p>Sign Up</p> 
+          </div>
+    </div>
 
-  Sign Up
+    <div id="whyus-section">
+      <h3>
+        Why Us
+      </h3>
+      <p>
+        Tutorials by industry experts
+        Peer &amp; expert code review
+        Coding exercises
+        Access to our GitHub repos
+        Community forum
+        Flashcard decks
+        New videos every week
+      </p>
+    </div>
 
-  Why Us
+  </div>
 
-  Tutorials by industry experts
-  Peer &amp; expert code review
-  Coding exercises
-  Access to our GitHub repos
-  Community forum
-  Flashcard decks
-  New videos every week
-  
   <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
+    <!--
+      <p class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+        Coded by <a href="#">Your Name Here</a>.
+      </p>
+
+    -->
   </footer>
 </body>
+
 </html>
