--- a/Junior/Challenge 01/index.html
+++ b/Junior/Challenge 01/index.html
@@ -5,21 +5,38 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="styles.css">
   
   <title>Frontend Mentor | [Challenge Name Here]</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 
+    <style>
+      .attribution { font-size: 11px; text-align: center; }
+      .attribution a { color: hsl(228, 45%, 44%); }
+    </style>
+  -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+    </style>
 </head>
 <body>
+  <header id="header">
+    <div id="dashboard-top">
+      <h1>
+        Social Media Dashboard
+      </h1>
+      <h4>
+        Total Followers: 23,004
+      </h4>
+    </div>
+    <div id="horizontal-line"></div>
+    <div id="darkMode-button">
+      <h3>
+        Dark Mode
+      </h3>
+    </div>
+  </header>
 
-  Social Media Dashboard
-  Total Followers: 23,004
-
-  Dark Mode
 
   
 
@@ -79,9 +96,12 @@
   1407
   12%
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+
+  <!--
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Your Name Here</a>.
+    </div>
+  -->
 </body>
 </html>
