First section created

--- a/Junior/Challenge 01/index.html
+++ b/Junior/Challenge 01/index.html
@@ -19,8 +19,11 @@
     @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
     </style>
 </head>
+
 <body>
-  <header id="header">
+
+  <div id="background"></div>
+  <section id="header">
     <div id="dashboard-top">
       <h1>
         Social Media Dashboard
@@ -34,35 +37,48 @@
       <h3>
         Dark Mode
       </h3>
+      <div id="switch">
+        <div id="switchCircle"></div>
+      </div>
     </div>
-  </header>
+  </section>
 
+<section class="top-cards">
 
+    <div class="card card-facebook">
+      <span><img src="images/icon-facebook.svg" alt="">Doracido</span>
+      <h1>1987</h1>
+      <h4>Followers</h4>
+      <span class="user-indicator"><img src="images/icon-up.svg" alt=""> 12 Today</span>
+    </div>
+    <div class="card card-twitter">
+      <span><img src="images/icon-twitter.svg" alt="">@Doracido</span>
+      <h1>1044</h1>
+      <h4>Followers</h4>
+      <span class="user-indicator"><img src="images/icon-up.svg" alt=""> 99 Today</span>
+    </div>
+    <div class="card card-instagram">
+      <span><img src="images/icon-instagram.svg" alt="">@realdoracido</span>
+      <h1>11k</h1>
+      <h4>Followers</h4>
+      <span class="user-indicator"><img src="images/icon-up.svg" alt=""> 1099 Today</span>
+    </div>
+    <div class="card card-youtube">
+      <span><img src="images/icon-youtube.svg" alt="">Doro Acido</span>
+      <h1>8239</h1>
+      <h4>Followers</h4>
+      <span class="user-indicator"><img src="images/icon-down.svg" alt=""> 144 Today</span>
+    </div>
+
+</section>
   
-
-  @nathanf
-  1987
-  Followers
-  12 Today
-
-  @nathanf
-  1044
-  Followers
-  99 Today
-
-  @realnathanf
-  11k
-  Followers
-  1099 Today
-
-  Nathan F.
-  8239
-  Subscribers
-  144 Today
+<section id="overview">
+  <h2>
+    Overview - Today
+  </h2>
+</section>
 
 
-
-  Overview - Today
 
   Page Views
   87
