--- a/Junior/Challenge 01/index.html
+++ b/Junior/Challenge 01/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="styles.css">
-  
+
   <title>Frontend Mentor | [Challenge Name Here]</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 
@@ -17,33 +19,35 @@
   -->
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
-    </style>
+  </style>
 </head>
 
 <body>
 
   <div id="background"></div>
-  <section id="header">
-    <div id="dashboard-top">
-      <h1>
-        Social Media Dashboard
-      </h1>
-      <h4>
-        Total Followers: 23,004
-      </h4>
+  <section id="dashboard-top">
+    <h1>
+      Social Media Dashboard
+    </h1>
+    <h4>
+      Total Followers: 23,004
+    </h4>
     </div>
+
     <div id="horizontal-line"></div>
-    <div id="darkMode-button">
-      <h3>
-        Dark Mode
-      </h3>
-      <div id="switch">
-        <div id="switchCircle"></div>
+
+    <div id="right-head">
+      <div id="darkMode-button">
+        <h3>Dark Mode</h3>
+        <div id="switch">
+          <div id="switchCircle"></div>
+        </div>
       </div>
     </div>
   </section>
 
-<section class="top-cards">
+
+  <section class="top-cards">
 
     <div class="card card-facebook">
       <span><img src="images/icon-facebook.svg" alt="">Doracido</span>
@@ -70,13 +74,57 @@
       <span class="user-indicator"><img src="images/icon-down.svg" alt=""> 144 Today</span>
     </div>
 
-</section>
-  
-<section id="overview">
-  <h2>
-    Overview - Today
-  </h2>
-</section>
+  </section>
+
+  <section id="overview">
+    <h2>
+      Overview - Today
+    </h2>
+    <div class="overview-cards">
+
+      <div class="mini-card">
+        <span class="social-icon"><p>Page Views</p> <img src="images/icon-facebook.svg" alt=""></span>
+        <h1>87</h1>
+        <span class="mini-card-data"><img src="images/icon-up.svg" alt=""><p>3%</p> </span>
+      </div>
+      <div class="mini-card">
+        <span class="social-icon"><p>Page Views</p> <img src="images/icon-facebook.svg" alt=""></span>
+        <h1>87</h1>
+        <span class="mini-card-data"><img src="images/icon-up.svg" alt=""><p>3%</p> </span>
+      </div>
+      <div class="mini-card">
+        <span class="social-icon"><p>Page Views</p> <img src="images/icon-facebook.svg" alt=""></span>
+        <h1>87</h1>
+        <span class="mini-card-data"><img src="images/icon-up.svg" alt=""><p>3%</p> </span>
+      </div>
+      <div class="mini-card">
+        <span class="social-icon"><p>Page Views</p> <img src="images/icon-facebook.svg" alt=""></span>
+        <h1>87</h1>
+        <span class="mini-card-data"><img src="images/icon-up.svg" alt=""><p>3%</p> </span>
+      </div>
+      <div class="mini-card">
+        <span class="social-icon"><p>Page Views</p> <img src="images/icon-facebook.svg" alt=""></span>
+        <h1>87</h1>
+        <span class="mini-card-data"><img src="images/icon-up.svg" alt=""><p>3%</p> </span>
+      </div>
+      <div class="mini-card">
+        <span class="social-icon"><p>Page Views</p> <img src="images/icon-facebook.svg" alt=""></span>
+        <h1>87</h1>
+        <span class="mini-card-data"><img src="images/icon-up.svg" alt=""><p>3%</p> </span>
+      </div>
+      <div class="mini-card">
+        <span class="social-icon"><p>Page Views</p> <img src="images/icon-facebook.svg" alt=""></span>
+        <h1>87</h1>
+        <span class="mini-card-data"><img src="images/icon-up.svg" alt=""><p>3%</p> </span>
+      </div>
+      <div class="mini-card">
+        <span class="social-icon"><p>Page Views</p> <img src="images/icon-facebook.svg" alt=""></span>
+        <h1>87</h1>
+        <span class="mini-card-data"><img src="images/icon-up.svg" alt=""><p>3%</p> </span>
+      </div>
+    </div>
+
+  </section>
 
 
 
@@ -111,7 +159,7 @@
   Total Views
   1407
   12%
-  
+
 
   <!--
     <div class="attribution">
@@ -120,4 +168,5 @@
     </div>
   -->
 </body>
+
 </html>
