Finished grid styles

--- a/Junior/Challenge 01/index.html
+++ b/Junior/Challenge 01/index.html
@@ -53,25 +53,25 @@
       <span><img src="images/icon-facebook.svg" alt="">Doracido</span>
       <h1>1987</h1>
       <h4>Followers</h4>
-      <span class="user-indicator"><img src="images/icon-up.svg" alt=""> 12 Today</span>
+      <span class="user-indicator green-text"><img src="images/icon-up.svg" alt=""> 12 Today</span>
     </div>
     <div class="card card-twitter">
       <span><img src="images/icon-twitter.svg" alt="">@Doracido</span>
       <h1>1044</h1>
       <h4>Followers</h4>
-      <span class="user-indicator"><img src="images/icon-up.svg" alt=""> 99 Today</span>
+      <span class="user-indicator green-text"><img src="images/icon-up.svg" alt=""> 99 Today</span>
     </div>
     <div class="card card-instagram">
       <span><img src="images/icon-instagram.svg" alt="">@realdoracido</span>
       <h1>11k</h1>
       <h4>Followers</h4>
-      <span class="user-indicator"><img src="images/icon-up.svg" alt=""> 1099 Today</span>
+      <span class="user-indicator green-text"><img src="images/icon-up.svg" alt=""> 1099 Today</span>
     </div>
     <div class="card card-youtube">
       <span><img src="images/icon-youtube.svg" alt="">Doro Acido</span>
       <h1>8239</h1>
       <h4>Followers</h4>
-      <span class="user-indicator"><img src="images/icon-down.svg" alt=""> 144 Today</span>
+      <span class="user-indicator red-text"><img src="images/icon-down.svg" alt=""> 144 Today</span>
     </div>
 
   </section>
@@ -82,84 +82,88 @@
     </h2>
     <div class="overview-cards">
 
-      <div class="mini-card">
-        <span class="social-icon"><p>Page Views</p> <img src="images/icon-facebook.svg" alt=""></span>
-        <h1>87</h1>
-        <span class="mini-card-data"><img src="images/icon-up.svg" alt=""><p>3%</p> </span>
-      </div>
-      <div class="mini-card">
-        <span class="social-icon"><p>Page Views</p> <img src="images/icon-facebook.svg" alt=""></span>
-        <h1>87</h1>
-        <span class="mini-card-data"><img src="images/icon-up.svg" alt=""><p>3%</p> </span>
-      </div>
-      <div class="mini-card">
-        <span class="social-icon"><p>Page Views</p> <img src="images/icon-facebook.svg" alt=""></span>
-        <h1>87</h1>
-        <span class="mini-card-data"><img src="images/icon-up.svg" alt=""><p>3%</p> </span>
-      </div>
-      <div class="mini-card">
-        <span class="social-icon"><p>Page Views</p> <img src="images/icon-facebook.svg" alt=""></span>
-        <h1>87</h1>
-        <span class="mini-card-data"><img src="images/icon-up.svg" alt=""><p>3%</p> </span>
-      </div>
-      <div class="mini-card">
-        <span class="social-icon"><p>Page Views</p> <img src="images/icon-facebook.svg" alt=""></span>
-        <h1>87</h1>
-        <span class="mini-card-data"><img src="images/icon-up.svg" alt=""><p>3%</p> </span>
-      </div>
-      <div class="mini-card">
-        <span class="social-icon"><p>Page Views</p> <img src="images/icon-facebook.svg" alt=""></span>
-        <h1>87</h1>
-        <span class="mini-card-data"><img src="images/icon-up.svg" alt=""><p>3%</p> </span>
-      </div>
-      <div class="mini-card">
-        <span class="social-icon"><p>Page Views</p> <img src="images/icon-facebook.svg" alt=""></span>
-        <h1>87</h1>
-        <span class="mini-card-data"><img src="images/icon-up.svg" alt=""><p>3%</p> </span>
-      </div>
-      <div class="mini-card">
-        <span class="social-icon"><p>Page Views</p> <img src="images/icon-facebook.svg" alt=""></span>
-        <h1>87</h1>
-        <span class="mini-card-data"><img src="images/icon-up.svg" alt=""><p>3%</p> </span>
-      </div>
-    </div>
+     
+      <article class="mini-card">
+        <span class="mini-card-heading">Page Views</span>
+        <img class="overview-card-icon" src="images/icon-facebook.svg" alt="" class="overview-card-icon">
+        <span class="overview-card-count">87</span>
+        <div class="overview-card-daily">
+          <img src="images/icon-up.svg" alt="" class="misc-icon">
+          <span class="green-text"> 3%</span>
+        </div>
+      </article>
+
+      <article class="mini-card">
+        <span class="mini-card-heading">Likes</span>
+        <img class="overview-card-icon" src="images/icon-facebook.svg" alt="" class="overview-card-icon">
+        <span class="overview-card-count">52</span>
+        <div class="overview-card-daily">
+          <img src="images/icon-down.svg" alt="" class="misc-icon">
+          <span class="red-text"> 2%</span>
+        </div>
+      </article>
+
+      <article class="mini-card">
+        <span class="mini-card-heading">Likes</span>
+        <img class="overview-card-icon" src="images/icon-instagram.svg" alt="" class="overview-card-icon">
+        <span class="overview-card-count">5462</span>
+        <div class="overview-card-daily">
+          <img src="images/icon-up.svg" alt="" class="misc-icon">
+          <span class="green-text"> 2257%</span>
+        </div>
+      </article>
+
+      <article class="mini-card">
+        <span class="mini-card-heading">Profile Views</span>
+        <img class="overview-card-icon" src="images/icon-instagram.svg" alt="" class="overview-card-icon">
+        <span class="overview-card-count">52k</span>
+        <div class="overview-card-daily">
+          <img src="images/icon-up.svg" alt="" class="misc-icon">
+          <span class="green-text"> 1375%</span>
+        </div>
+      </article>
+
+      <article class="mini-card">
+        <span class="mini-card-heading">Retweets</span>
+        <img class="overview-card-icon" src="images/icon-twitter.svg" alt="" class="overview-card-icon">
+        <span class="overview-card-count">117</span>
+        <div class="overview-card-daily">
+          <img src="images/icon-up.svg" alt="" class="misc-icon">
+          <span class="green-text"> 303%</span>
+        </div>
+      </article>
+
+      <article class="mini-card">
+        <span class="mini-card-heading">Likes</span>
+        <img class="overview-card-icon" src="images/icon-twitter.svg" alt="" class="overview-card-icon">
+        <span class="overview-card-count">52</span>
+        <div class="overview-card-daily">
+          <img src="images/icon-up.svg" alt="" class="misc-icon">
+          <span class="green-text"> 3%</span>
+        </div>
+      </article>
+
+      <article class="mini-card">
+        <span class="mini-card-heading">Likes</span>
+        <img class="overview-card-icon" src="images/icon-youtube.svg" alt="" class="overview-card-icon">
+        <span class="overview-card-count">107</span>
+        <div class="overview-card-daily">
+          <img src="images/icon-down.svg" alt="" class="misc-icon">
+          <span class="red-text"> 19%</span>
+        </div>
+      </article>
+      <article class="mini-card">
+        <span class="mini-card-heading">Total Views</span>
+        <img class="overview-card-icon" src="images/icon-youtube.svg" alt="" class="overview-card-icon">
+        <span class="overview-card-count">1407</span>
+        <div class="overview-card-daily">
+          <img src="images/icon-down.svg" alt="" class="misc-icon">
+          <span class="red-text"> 12%</span>
+        </div>
+      </article>
+
 
   </section>
-
-
-
-  Page Views
-  87
-  3%
-
-  Likes
-  52
-  2%
-
-  Likes
-  5462
-  2257%
-
-  Profile Views
-  52k
-  1375%
-
-  Retweets
-  117
-  303%
-
-  Likes
-  507
-  553%
-
-  Likes
-  107
-  19%
-
-  Total Views
-  1407
-  12%
-
 
   <!--
     <div class="attribution">
