--- a/Junior/Challenge 01/index.html
+++ b/Junior/Challenge 01/index.html
@@ -20,6 +20,7 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
   </style>
+  <script src="app.js"></script>
 </head>
 
 <body>
@@ -36,14 +37,19 @@
 
     <div id="horizontal-line"></div>
 
-    <div id="right-head">
-      <div id="darkMode-button">
-        <h3>Dark Mode</h3>
-        <div id="switch">
-          <div id="switchCircle"></div>
-        </div>
+    <div class="toggle-container">
+
+      <span class="toggle-label">Dark mode</span>
+
+      <div class="toggle-area" id="toggle-switch">
+        <div class="toggle-left"></div>
+        <div class="toggle"></div>
+        <div class="toggle-right"></div>
       </div>
+
     </div>
+
+
   </section>
 
 
