Calculator initial commit

--- a/Junior/Challenge 01/index.html
+++ b/Junior/Challenge 01/index.html
@@ -23,7 +23,7 @@
   <script src="app.js"></script>
 </head>
 
-<body>
+<body class="light-theme">
 
   <div id="background"></div>
   <section id="dashboard-top">
