--- a/Junior/Calculator/index.html
+++ b/Junior/Calculator/index.html
@@ -9,31 +9,33 @@
 <body>
     <section class="calculator">
 
-        <div class="calculator-screen"></div>
+        <div id="calculator-screen"></div>
 
         <div class="keyboard">
 
-                <div class="key" id="one">1</div>
-                <div class="key" id="two">2</div>
-                <div class="key" id="three">3</div>
-                <div class="key" id="four">4</div>
-                <div class="key" id="five">5</div>
-                <div class="key" id="six">6</div>
-                <div class="key" id="seven">7</div>
-                <div class="key" id="eight">8</div>
-                <div class="key" id="nine">9</div>
-                <div class="key" id="zero">0</div>
-                <div class="key right-buttons" id="plus">+</div>
-                <div class="key right-buttons" id="minus">-</div>
-                <div class="key right-buttons" id="divide">/</div>
-                <div class="key top-buttons" id="mod">%</div>
-                <div class="key right-buttons" id="mult">*</div>
-                <div class="key right-buttons" id="equals">=</div>
+                <div class="key number" id="one">1</div>
+                <div class="key number" id="two">2</div>
+                <div class="key number" id="three">3</div>
+                <div class="key number" id="four">4</div>
+                <div class="key number" id="five">5</div>
+                <div class="key number" id="six">6</div>
+                <div class="key number" id="seven">7</div>
+                <div class="key number" id="eight">8</div>
+                <div class="key number" id="nine">9</div>
+                <div class="key number" id="zero">0</div>
+                <div class="key right-buttons operand" id="plus">+</div>
+                <div class="key right-buttons operand" id="minus">-</div>
+                <div class="key right-buttons operand" id="divide">/</div>
+                <div class="key top-buttons operand" id="mod">%</div>
+                <div class="key right-buttons operand" id="mult">*</div>
+                <div class="key right-buttons operand" id="equals">=</div>
                 <div class="key top-buttons" id="AC">AC</div>
                 <div class="key" id="dot">.</div>
             
         </div>
 
     </section>
+
+    <script src="app.js"></script>
 </body>
 </html>
