--- a/Junior/Calculator/index.html
+++ b/Junior/Calculator/index.html
@@ -7,34 +7,35 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <section class="calculator">
 
-        <div id="calculator-screen"></div>
-
-        <div class="keyboard">
-
-                <div class="key number" id="one">1</div>
-                <div class="key number" id="two">2</div>
-                <div class="key number" id="three">3</div>
-                <div class="key number" id="four">4</div>
-                <div class="key number" id="five">5</div>
-                <div class="key number" id="six">6</div>
-                <div class="key number" id="seven">7</div>
-                <div class="key number" id="eight">8</div>
-                <div class="key number" id="nine">9</div>
-                <div class="key number" id="zero">0</div>
-                <div class="key right-buttons operand" id="plus">+</div>
-                <div class="key right-buttons operand" id="minus">-</div>
-                <div class="key right-buttons operand" id="divide">/</div>
-                <div class="key top-buttons operand" id="mod">%</div>
-                <div class="key right-buttons operand" id="mult">*</div>
-                <div class="key right-buttons operand" id="equals">=</div>
-                <div class="key top-buttons" id="AC">AC</div>
-                <div class="key" id="dot">.</div>
+        <form class="calculator" name="calc">
             
-        </div>
+            <input id="calculator-screen" type="value" type="text" name="txt" readonly="">
+                <div class="keyboard">
 
-    </section>
+                <span onclick="document.calc.txt.value += '1' " class="key" id="one">1</span>
+                <span onclick="document.calc.txt.value += '2' " class="key" id="two">2</span>
+                <span onclick="document.calc.txt.value += '3' " class="key" id="three">3</span>
+                <span onclick="document.calc.txt.value += '4' " class="key" id="four">4</span>
+                <span onclick="document.calc.txt.value += '5' " class="key" id="five">5</span>
+                <span onclick="document.calc.txt.value += '6' " class="key" id="six">6</span>
+                <span onclick="document.calc.txt.value += '7' " class="key" id="seven">7</span>
+                <span onclick="document.calc.txt.value += '8' " class="key" id="eight">8</span>
+                <span onclick="document.calc.txt.value += '9' " class="key" id="nine">9</span>
+                <span onclick="document.calc.txt.value += '0' " class="key" id="zero">0</span>
+                <span onclick="document.calc.txt.value += '+' " class="key right-buttons" id="plus">+</span>
+                <span onclick="document.calc.txt.value += '-' " class="key right-buttons" id="minus">-</span>
+                <span onclick="document.calc.txt.value += '/' " class="key right-buttons" id="divide">/</span>
+                <span onclick="document.calc.txt.value += '%' " class="key top-buttons" id="mod">%</span>
+                <span onclick="document.calc.txt.value += '*' " class="key right-buttons" id="mult">*</span>
+                <span onclick="document.calc.txt.value = eval(calc.txt.value) " class="key right-buttons" id="equals">=</span>
+                <span onclick="document.calc.txt.value = calc.txt.value = '' " class="key top-buttons" id="AC">AC</span>
+                <span onclick="document.calc.txt.value += '.' " class="key" id="dot">.</span>
+                
+            </div>
+        </form>
+
+
 
     <script src="app.js"></script>
 </body>
